--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -1520,7 +1520,7 @@
 
         .mode-toggle-btn {
             width: 50px;
-            height: 50px;
+            height: 30px;
             padding: 0;
             background-color: #4CAF50;
             color: white;
