--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -2367,7 +2367,7 @@
             ctx.font = 'bold 24px Arial';
             ctx.textAlign = 'center';
             ctx.textBaseline = 'middle';
-            ctx.fillText(`${blackPips}`, 400, 287.5);
+            ctx.fillText(`${blackPips}`, 400, 375);
 
             // Draw white pips (below center)
             ctx.fillStyle = '#ffffff';
@@ -2376,7 +2376,7 @@
             ctx.font = 'bold 24px Arial';
             ctx.textAlign = 'center';
             ctx.textBaseline = 'middle';
-            ctx.fillText(`${whitePips}`, 400, 512.5);
+            ctx.fillText(`${whitePips}`, 400, 435);
         }
 
         function getTotalCheckers(pos) {
