--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -2381,7 +2381,7 @@
             // Coordinates for pip boxes (center x, center y)
             const pipCenterX = 400;
             const blackPipsY = 290;  // Above center
-            const whitePipsY = 510;  // Below center
+            const whitePipsY = 420;  // Below center
 
             drawPipBox(pipCenterX, blackPipsY, blackPips, false);  // Black background
             drawPipBox(pipCenterX, whitePipsY, whitePips, true);   // White background
