--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -2406,9 +2406,9 @@
                 const blackPips = calculatePips(positions.second, 'second');
 
                 // Coordinates for pip boxes (center x, center y)
-                const pipCenterX = 400;
-                const blackPipsY = 20;  // Above center
-                const whitePipsY = 760;  // Below center
+                const pipCenterX = 700;
+                const blackPipsY = 380;  // Above center
+                const whitePipsY = 420;  // Below center
 
                 drawPipBox(pipCenterX, blackPipsY, blackPips, false);  // Black background
                 drawPipBox(pipCenterX, whitePipsY, whitePips, true);   // White background
